# robotic-mapping

./: README.md
code/cpp/competition/: CMakeLists.txt
code/cpp/competition/data/Synthetic_base/: camera_calibration.json  camera_trajectory_tum.txt  timings.csv
code/cpp/competition/include/: kalman.hpp  keyframeselection.hpp  odometry.hpp
code/cpp/competition/src/: competition.cpp  keyframe_selection.cpp  odometry.cpp  vo_epipolar.cpp
code/cpp/features/: CMakeLists.txt
code/cpp/features/src/: features.cpp
code/cpp/lidar-odometry/: CMakeLists.txt
code/cpp/lidar-odometry/.devcontainer/: Dockerfile
code/cpp/lidar-odometry/data/: cloud_0.ply  cloud_1.ply  cloud_2.ply  cloud_3.ply  cloud_4.ply
code/cpp/lidar-odometry/src/: main.cpp
code/cpp/lio-slam/: README.md
code/cpp/lio-slam/scanmatcher/include/scanmatcher/: utility.h
code/cpp/lio-slam/scanmatcher/include/scanmatcher/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
code/python/: main.py
code/python/feature_detectors/: base.py
python/: mamba_env.yaml
python/feature_detectors/: harris.py
resources/: Dev Container Instructions.docx  README.md  how to set up a devcontainer.md  list of slam datasets.md  list of slam systems.md  setting up ubuntu and ros2 on windows.md  useful tools and software.md
